--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -10,6 +10,11 @@ import /init.${ro.hardware}.rc
 import /init.usb.configfs.rc
 import /init.${ro.zygote}.rc
 
+# Include AOSCP's extra init file
+import /init.aoscp.rc
+ 
+ 
+
 on early-init
     # Set init and its forked children's oom_adj.
     write /proc/1/oom_score_adj -1000
